2007-12-04  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/ipsec_doi.c
	  src/racoon/ipsec_doi.h
	  src/racoon/isakmp_quick.c: modify ipsecdoi_sockaddr2id to obtain host
	  address without specific prefix legth.
	  src/racoon/isakmp_quick.c: correct a memory leak in phase2.
	
2007-11-29  Yvan Vanhullebus  <vanhu@netasq.com>
	From Natanael Copa <natanael.copa@gmail.com>:
	* src/racoon/Makefile.am: fixed a race condition when building
	  yacc stuff.
	
2007-11-09  Yvan Vanhullebus  <vanhu@netasq.com>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/pfkey.c: Some sanity check in pk_recv()
	* src/racoon/policy.c: better matching of SPD entries in
	  getsp_r().
	* src/racoon/isakmp_quick.c: added some debug in get_proposal_r().

2007-10-18  Emmanuel Dreyfus  <manu@netbsd.org>
	* src/racoon/{isakmp_unity.[ch]|isakmp_cfg.c|racoon.conf.5}:
	  Add SPLITNET_{INCLUDR_LOCAL}_CIDR to hook scripts

2007-10-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/libipsec/pfkey.c: Try to increase the buffer size of the
	  pfkey socket, this may help things when we have a huge SPD.

2007-10-02  Yvan Vanhullebus  <vanhu@netasq.com>
	From Scott Lamb <slamb@slamb.org>
	* src/racoon/plog.[ch]: new plog macro
	* src/racoon/kmpstat.c: plog changed to _plog to work with new plog macro
	* src/racoon/crypto_openssl.c: includes plog.h to work with the
	  new plog macro
	
2007-09-19  Matthew Grooms <mgrooms@shrew.net>
	From Gabriel Somlo <somlo@cmu.edu>
	* src/racoon/isakmp.c: Set REUSE option on sockets to prevent failures
	associated with closing and immediately re-opening.

2007-09-19  Matthew Grooms <mgrooms@shrew.net>
	From Gabriel Somlo <somlo@cmu.edu>
	* src/racoon/isakmp_unity.c: Prevent duplicate entries in splitnet list.

2007-09-12  Matthew Grooms <mgrooms@shrew.net>
	From Joy Latten <latten@austin.ibm.com>
	* configure.ac: Fix autoconf check for selinux support.

2007-09-12  Matthew Grooms <mgrooms@shrew.net>
	* src/racoon/cfparse.y
	src/racoon/cftoken.l